refactor(core,ffm,client,server): modernize Java domain model to Java 25 (Jackson 3/Sealed/ScopedValue)
Phase 1-3 — JSON & typing
- Jackson Core 3.1.6-only; remove Gson from common; streaming bounded
  StatusNetworksCodec/NativeManifestCodec (limits, fail-closed)
- AcceleratedTransport + typed EnumMap NetworksAbility; pure NetworksEntry
- sealed ConnectionPlan (TcpPlan/AcceleratedPlan + QuicAttempt/KcpAttempt),
  sealed NativeConnectRequest/NativeServerRequest, typed sealed NativeEvent
- strip C ABI ints from semantic enums; FfmAbiCodec owns all ABI conversion
- record/value invariants (transport targets, requests, plans, manifests,
  ConfigPaths/ClientSettings/NativeIoResult/ServerTransportSettings/resolved)

Phase 4-5 — robustness
- AccelerationInterceptionScope via ScopedValue (replaces bypass ThreadLocals)
- Duration time policy + monotonic ticker; typed EndpointKey; bounded caches
- NetBridgeProperties centralizes sysprops; field-local typed NightConfig
  extraction; atomic client config save; typed NativeResourceError
- Error Prone 2.36 -> 2.50 with unused checks re-enabled (mixin suppressions)
- HexFormat/Thread.ofPlatform modernization

Phase 6-7 — complexity
- FfmCallGate extraction (call lifecycle out of FfmNativeContext)
- DelegatingChannelFuture POC: REJECTED (evidence in docs/adr/0012)

Phase 8-9
- ADR-0012 + conventions/glossary/troubleshooting sync; verifyArchitecture
  internal.ffm reachability + JSON/ABI/ThreadLocal guards
- loader packaging: embed jackson-core+nightconfig once per Fabric/NeoForge
  jar with VerifyEmbeddedPackaging checks
- 239 unit + 239 native-integration tests green; no Rust/ABI changes